# rabbitmq-http-api-rs

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MODULE.bazel  README.md  WORKSPACE.bazel
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yaml  release.yaml  release.yml
src/: api.rs  blocking.rs  blocking_api.rs  commons.rs  error.rs  formatting.rs  lib.rs  password_hashing.rs  requests.rs  responses.rs  transformers.rs  uris.rs  utils.rs
src/api/: auth.rs  bindings.rs  channels.rs  client.rs  cluster.rs  connections.rs  consumers.rs  definitions.rs  deprecations.rs  exchanges.rs  feature_flags.rs  federation.rs  health_checks.rs  limits.rs  messages.rs  mod.rs  nodes.rs  overview.rs  parameters.rs  permissions.rs  policies.rs  queues_and_streams.rs  reachability.rs  rebalancing.rs  shovels.rs  tanzu.rs  users.rs  vhosts.rs
src/blocking_api/: auth.rs  bindings.rs  channels.rs  client.rs  cluster.rs  connections.rs  consumers.rs  definitions.rs  deprecations.rs  exchanges.rs  feature_flags.rs  federation.rs  health_checks.rs  limits.rs  messages.rs  mod.rs  nodes.rs  overview.rs  parameters.rs  permissions.rs  policies.rs  queues_and_streams.rs  reachability.rs  rebalancing.rs  shovels.rs  tanzu.rs  users.rs  vhosts.rs
src/requests/: bindings.rs  exchanges.rs  federation.rs  limits.rs  parameters.rs  permissions.rs  policies.rs  queues_and_streams.rs  shovels.rs  users.rs  vhosts.rs
src/responses/: channels.rs  cluster.rs  connections.rs  consumers.rs  definitions.rs  deprecations.rs  feature_flags.rs  federation.rs  health_checks.rs  parameters.rs  permissions.rs  policies.rs  queues_and_streams.rs  reachability.rs  shovel.rs  tanzu.rs  users.rs  vhosts.rs
tests/: async_access_control_proptests.rs  async_auth_attempts_tests.rs  async_auth_configuration_tests.rs  async_binding_tests.rs  async_channel_tests.rs  async_cluster_metadata_tests.rs  async_connection_tests.rs  async_consumer_tests.rs  async_definitions_proptests.rs  async_definitions_tests.rs  async_deprecated_feature_tests.rs  async_dynamic_shovel_tests.rs  async_exchange_tests.rs  async_feature_flag_tests.rs  async_health_checks_tests.rs  async_leader_rebalancing_tests.rs  async_message_tests.rs  async_node_memory_footprint_tests.rs  async_node_tests.rs  async_overview_tests.rs  async_permission_tests.rs  async_policy_tests.rs  async_queue_federation_tests.rs  async_queue_proptests.rs  async_queue_tests.rs  async_runtime_parameter_tests.rs  async_stream_consumer_tests.rs  async_stream_publisher_tests.rs  async_stream_tests.rs  async_tls_tests.rs  async_user_limit_tests.rs  async_user_proptests.rs  async_user_tests.rs  async_vhost_proptests.rs  async_virtual_host_limit_tests.rs  async_virtual_host_tests.rs  async_whoami_tests.rs  async_zeroize_tests.rs  auth_configuration_tests.rs  binding_tests.rs  (+100 more)
tests/integration/: async_auth_attempts_tests.rs  async_auth_configuration_tests.rs  async_binding_tests.rs  async_channel_tests.rs  async_cluster_metadata_tests.rs  async_connection_tests.rs  async_consumer_tests.rs  async_definitions_tests.rs  async_deprecated_feature_tests.rs  async_dynamic_shovel_tests.rs  async_exchange_tests.rs  async_feature_flag_tests.rs  async_health_checks_tests.rs  async_leader_rebalancing_tests.rs  async_message_tests.rs  async_node_tests.rs  async_overview_tests.rs  async_permission_tests.rs  async_policy_tests.rs  async_queue_federation_tests.rs  async_queue_proptests.rs  async_queue_tests.rs  async_runtime_parameter_tests.rs  async_stream_consumer_tests.rs  async_stream_publisher_tests.rs  async_stream_tests.rs  async_tls_tests.rs  async_user_limit_tests.rs  async_user_proptests.rs  async_user_tests.rs  async_virtual_host_limit_tests.rs  async_virtual_host_tests.rs  async_whoami_tests.rs  async_zeroize_tests.rs  blocking_auth_attempts_tests.rs  blocking_auth_configuration_tests.rs  blocking_binding_tests.rs  blocking_channel_tests.rs  blocking_cluster_metadata_tests.rs  blocking_connection_tests.rs  (+30 more)
tests/proptest-regressions/: async_queue_proptests.txt  blocking_queue_proptests.txt
tests/proptests/: main.rs  unit_federation_conversion_proptests.rs  unit_policy_proptests.rs  unit_queue_definition_proptests.rs  unit_queue_proptests.rs  unit_shovel_conversion_proptests.rs  unit_zeroize_proptests.rs
tests/unit/: main.rs  unit_async_endpoint_validation_tests.rs  unit_binding_deletion_tests.rs  unit_builder_tests.rs  unit_cluster_definition_diff_tests.rs  unit_cluster_definition_set_transformations_tests.rs  unit_cluster_node_version_tests.rs  unit_default_tests.rs  unit_error_tests.rs  unit_federation_conversion_tests.rs  unit_listener_tests.rs  unit_node_memory_footprint_tests.rs  unit_overview_crypto_lib_version_tests.rs  unit_policy_target_tests.rs  unit_policy_tests.rs  unit_queue_definition_tests.rs  unit_queue_tests.rs  unit_runtime_characteristics_tests.rs  unit_shovel_conversion_tests.rs  unit_vhost_definition_set_transformations_tests.rs  unit_zeroize_tests.rs
