load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test_suite")

rust_library(
    name = "rabbitmq_http_client",
    srcs = glob(["src/*.rs"]),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ),
)

rust_library(
    name = "common",
    srcs = ["tests/common.rs"],
)

rust_test_suite(
    name = "tests",
    srcs = glob(["tests/*_tests.rs"]),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = [
        ":rabbitmq_http_client",
        ":common",
    ] + all_crate_deps(
        normal = True,
    ),
)
