[package]
name = "rabbitmq_http_client"
version = "0.29.0"
edition = "2021"

description = "RabbitMQ HTTP API client"
license = "MIT OR Apache-2.0"

[lib]
# doctests for async client must be wrapped
# with a Tokio block_on block or marked with no_run,
# or skipped entirely, which is what we want
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.6"
serde_json = "1"
rand = "0.9"
ring = "0.17"
rbase64 = "2"
percent-encoding = { version = "2", optional = true }
tabled = { version = "0.18", features = ["derive", "macros"], optional = true }
regex = { version = "1", features = ["std"] }

reqwest = { version = "0.12.12", features = [
    "json",
    "multipart",
], optional = true }
backtrace = { version = "0.3", optional = true }
thiserror = { version = "2", optional = true }
tokio = "1.44"
time = { version = "0.3.40", features = ["serde-human-readable"] }

[dev-dependencies]
amqprs = {  version = "2"}
cargo-nextest = "0.9.92"

[features]
default = ["core", "blocking"]
core = []
async = [
    "dep:reqwest",
    "dep:thiserror",
    "dep:backtrace",
    "dep:percent-encoding"
]
blocking = [
    "dep:reqwest",
    "reqwest/blocking",
    "dep:thiserror",
    "dep:backtrace",
    "dep:percent-encoding",
]
tabled = ["dep:tabled"]

[profiles.dev]
incremental = true
overflow-checks = true
debug-assertions = true

[profiles.release]
incremental = false
overflow-checks = false
debug-assertions = false
