[package]
name = "rabbitmq_http_client"
version = "0.84.0"
edition = "2024"

description = "RabbitMQ HTTP API client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/michaelklishin/rabbitmq-http-api-rs"
keywords = [
    "rabbitmq"
]

[lib]
# doctests for async client must be wrapped
# with a Tokio block_on block or marked with no_run,
# or skipped entirely, which is what we want
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.6"
serde_json = "1.0"
rand = "0.10"
ring = "0.17"
rbase64 = "2.0"
percent-encoding = { version = "2.3", optional = true }
tabled = { version = "0.20", features = ["derive", "macros"], optional = true }
regex = { version = "1.12", features = ["std"] }
url = "2.5"
urlencoding = "2.1"
log = "0.4"

reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "multipart",
], optional = true }
backtrace = { version = "0.3", optional = true }
thiserror = { version = "2.0", optional = true }
tokio = "1.49"
time = { version = "0.3", features = ["serde-human-readable"] }
zeroize = { version = "1.8", features = ["zeroize_derive"], optional = true }

[dev-dependencies]
amqprs = { version = "2.1" }
cargo-nextest = "0.9"
proptest = "1.9"
fern = "0.7"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[features]
default = ["blocking", "default-tls"]
async = [
    "dep:reqwest",
    "dep:thiserror",
    "dep:backtrace",
    "dep:percent-encoding",
]
blocking = [
    "dep:reqwest",
    "reqwest/blocking",
    "dep:thiserror",
    "dep:backtrace",
    "dep:percent-encoding",
]
tabled = ["dep:tabled"]
default-tls = ["reqwest?/default-tls"]
native-tls = ["reqwest?/native-tls"]
rustls = ["reqwest?/rustls"]
hickory-dns = ["reqwest?/hickory-dns"]
zeroize = ["dep:zeroize"]

[profile.ci]
inherits = "dev"
opt-level = "s"
strip = true

[lints.clippy]
uninlined_format_args = "allow"
